--- a/work-experiences/projects-resume.html
+++ b/work-experiences/projects-resume.html
@@ -110,7 +110,7 @@
 											</header>
 											
 											<section>
-												<a href="files/Chin, Khai Yi (Resume).pdf">Click here to view or download (PDF) - last updated September 5th 2016</a>
+												<a href="files/Chin, Khai Yi (Resume).pdf">Click here to view or download (PDF) - last updated December 23rd 2016</a>
 											</section>
 
 										</article>
