Insert blogger site in index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </ul>
           </li>
           <li><!-- Blog Tab -->
-            <a href="blog/blog-main.html">Blog **Under Construction**</a>
+            <a href="https://khaiyichin.blogspot.com">Blog</a>
           </li>
         </ul>
       </nav>
