--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <!--
-	TXT by HTML5 UP	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
+	TXT by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Khai Yi Chin | My Portfolio</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,">
     <link rel="shortcut icon" href="images/K%20Favicon.ico" type="image/x-icon">
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,10 +21,10 @@
         <div class="logo container">
           <div>
             <h1><a id="logo">KHAI YI CHIN</a></h1>
-            <!-- <p>My Portfolio</p> -->
           </div>
         </div>
       </header>
+      
       <nav id="nav"><!-- Nav -->
         <ul>
           <li id="home"><!-- Khai Yi Chin Tab -->
@@ -265,8 +267,7 @@
     <footer id="footer" class="container">
       <div class="row 200%">
         <div class="12u">
-        <!-- Contact -->
-          <section>
+          <section><!-- Contact -->
             <h2 class="major"><span>Get in touch</span></h2>
             <ul class="contact">
               <li>
@@ -281,7 +282,9 @@
               <li>
                 <a class="icon fa-instagram" href="https://instagram.com/khaiyichin/"><span class="label">Instagram</span></a>
               </li>
-            <!--<li><a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a></li>-->
+              <!--<li>-->
+              <!--  <a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
+              <!--</li>-->
             </ul>
           </section>
         </div>
@@ -297,13 +300,22 @@
             Design: <a href="http://html5up.net">HTML5 UP</a>
           </li>
           <li>
-            Last Updated: 02/18/19
+            Last Updated: <var id="date"></var>
           </li>
         </ul>
       </div>
     </footer>
     
     <!-- Scripts -->
+    <script>
+      n =  new Date();
+      y = n.getFullYear() - 2000;
+      m = n.getMonth() + 1;
+      d = n.getDate();
+      if (m < 10){m = "0" + m;}
+      if (d < 10){d = "0" + d;}
+      document.getElementById("date").innerHTML = m + "/" + d + "/" + y;
+    </script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.dropotron.min.js"></script>
     <script src="assets/js/skel.min.js"></script>
