Clean up sct.html

--- a/work-experiences/work-experiences.html
+++ b/work-experiences/work-experiences.html
@@ -228,50 +228,48 @@
 					</div>
 				</div>
 			</div>
-		</div>
-
-		<!-- Footer -->
-		<footer id="footer" class="container">
-			<div class="row 200%">
-				<div class="12u">
-					<section><!-- Contact -->
-						<h2 class="major"><span>Get in touch</span></h2>
-						<ul class="contact">
-							<li>
-								<a class="icon fa-linkedin" href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a"><span class="label">Linkedin</span></a>
-							</li>
-							<li>
-								<a class="icon fa-facebook" href="https://www.facebook.com/khaiyichin"><span class="label">Facebook</span></a>
-							</li>
-							<li>
-								<a class="icon fa-twitter" href="https://www.twitter.com/khaiyichin"><span class="label">Twitter</span></a>
-							</li>
-							<li>
-								<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/"><span class="label">Instagram</span></a>
-							</li>
-							<!--<li>-->
-							<!--	<a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
-							<!--</li>-->
-						</ul>
-					</section>
+			<footer id="footer" class="container"><!-- Footer -->
+				<div class="row 200%">
+					<div class="12u">
+						<section><!-- Contact -->
+							<h2 class="major"><span>Get in touch</span></h2>
+							<ul class="contact">
+								<li>
+									<a class="icon fa-linkedin" href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a"><span class="label">Linkedin</span></a>
+								</li>
+								<li>
+									<a class="icon fa-facebook" href="https://www.facebook.com/khaiyichin"><span class="label">Facebook</span></a>
+								</li>
+								<li>
+									<a class="icon fa-twitter" href="https://www.twitter.com/khaiyichin"><span class="label">Twitter</span></a>
+								</li>
+								<li>
+									<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/"><span class="label">Instagram</span></a>
+								</li>
+								<!--<li>-->
+								<!--	<a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
+								<!--</li>-->
+							</ul>
+						</section>
+					</div>
 				</div>
-			</div>
-
-			<!-- Copyright -->
-			<div id="copyright">
-				<ul class="menu">
-					<li>
-						© Khai Yi Chin. All rights reserved
-					</li>
-					<li>
-						Design: <a href="http://html5up.net">HTML5 UP</a>
-					</li>
-					<li>
-						Last Updated: <var id="date"></var>
-					</li>
-				</ul>
-			</div>
-		</footer>
+	
+				<!-- Copyright -->
+				<div id="copyright">
+					<ul class="menu">
+						<li>
+							© Khai Yi Chin. All rights reserved
+						</li>
+						<li>
+							Design: <a href="http://html5up.net">HTML5 UP</a>
+						</li>
+						<li>
+							Last Updated: <var id="date"></var>
+						</li>
+					</ul>
+				</div>
+			</footer>
+		</div>
 
 		<!-- Scripts -->
 		<script>
