Clean up adtp.html

--- a/work-experiences/ramlab.html
+++ b/work-experiences/ramlab.html
@@ -119,10 +119,7 @@
 									</header>
 									<section class="introduction"><!-- Intro -->
 										<span class="image left square" title="McKibben artificial muscles wrapped by Smart Braid on the test fixture"><img src="images/ramlab1.jpg" alt="McKibben artificial muscles wrapped by Smart Braid on the test fixture" /></span>
-										<p>
-											I joined the Robotics and Motion Laboratory (RAMlab) from November 2014 to June 2016, beginning when I expressed my interest to work in the lab for a research course for the Winter 2015 semester.
-											Together with PhD mentor Wyatt Felt, we worked to create a Smart Braid that effectively senses contraction of the McKibben artificial muscle that it wraps.
-										</p>
+										<p>I joined the Robotics and Motion Laboratory (RAMlab) from November 2014 to June 2016, beginning when I expressed my interest to work in the lab for a research course for the Winter 2015 semester. Together with PhD mentor Wyatt Felt, we worked to create a Smart Braid that effectively senses contraction of the McKibben artificial muscle that it wraps.</p>
 									</section>
 									<section class="work-experience section"><!-- Background -->
 										<h3 class="individual">Background</h3>
