Update all references to non-academic to interests

--- a/main/index.html
+++ b/main/index.html
@@ -60,9 +60,9 @@
 								<li><a href="../work-experiences/projects-resume.html">Projects & Résumé</a></li>
 							</ul>
 						</li>
-						<li><a href="../non-academic/non-academic.html">Non-Academic</a>
+						<li><a href="../interests/interests.html">Non-Academic</a>
 							<ul>
-								<li><a href="../non-academic/non-academic.html">Interests, Hobbies & Projects</a></li>
+								<li><a href="../interests/interests.html">Interests, Hobbies & Projects</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -94,7 +94,7 @@
 											<li><a href="../work-experiences/work-experiences.html" class="icon fa-briefcase"><span class="label">Work & Leadership Experiences</span></a>
 												<ul>Work & Leadership Experiences</ul>
 											</li>
-											<li><a href="../non-academic/non-academic.html" class="icon fa-music"><span class="label">Non-Academic</span></a>
+											<li><a href="../interests/interests.html" class="icon fa-music"><span class="label">Non-Academic</span></a>
 												<ul>Non-Academic</ul>
 											</li>
 											<h3>or continue scrolling</h3>
