--- a/non-academic/non-academic.html
+++ b/non-academic/non-academic.html
@@ -59,9 +59,9 @@
 								<li><a href="../work-experiences/projects-resume.html">Projects & Résumé</a></li>
 							</ul>
 						</li>
-						<li class="current"><a href="../non-academic/non-academic.html">Non-Academic</a>
+						<li class="current"><a href="../interests/interests.html">Non-Academic</a>
 							<ul>
-								<li><a href="../non-academic/non-academic.html">Interests, Hobbies & Projects</a></li>
+								<li><a href="../interests/interests.html">Interests, Hobbies & Projects</a></li>
 							</ul>
 						</li>
 					</ul>
