--- a/work-experiences/adtp.html
+++ b/work-experiences/adtp.html
@@ -93,11 +93,11 @@
               </li>
             </ul>
           </li>
-          <li><!-- Non-Academic Tab -->
-            <a href="../non-academic/non-academic.html">Interests</a>
+          <li><!-- Interests Tab -->
+            <a href="../interests/interests.html">Interests</a>
             <ul>
               <li>
-                <a href="../non-academic/non-academic.html">Hobbies &amp; Projects</a>
+                <a href="../interests/interests.html">Hobbies &amp; Projects</a>
               </li>
             </ul>
           </li>
