--- a/work-experiences/midwest.html
+++ b/work-experiences/midwest.html
@@ -94,10 +94,10 @@
             </ul>
           </li>
           <li><!-- Non-Academic Tab -->
-            <a href="../non-academic/non-academic.html">Interests</a>
+            <a href="../interests/interests.html">Interests</a>
             <ul>
               <li>
-                <a href="../non-academic/non-academic.html">Hobbies &amp; Projects</a>
+                <a href="../interests/interests.html">Hobbies &amp; Projects</a>
               </li>
             </ul>
           </li>
