Fix path issue for interests.html and remove duplicate var id for projects-resume.html

--- a/interests/interests.html
+++ b/interests/interests.html
@@ -53,7 +53,7 @@
             </ul>
           </li>
           <li><!-- Work Experiences Tab -->
-            <a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
+            <a id="work-experiences" href="../work-experiences/work-experiences.html"> Work &amp; Leadership Experiences</a>
             <ul>
               <li>
                 <a>University of Texas at Austin, TX, USA</a>
@@ -67,16 +67,16 @@
                 <a>University of Michigan, MI, USA</a>
                 <ul>
                   <li>
-                    <a href="ramlab.html">RAMlab</a>
+                    <a href="../work-experiences/ramlab.html">RAMlab</a>
                   </li>
                   <li>
-                    <a href="pierpont.html">Pierpont Commons</a>
+                    <a href="../work-experiences/pierpont.html">Pierpont Commons</a>
                   </li>
                   <li>
-                    <a href="midwest.html">Malaysia Midwest Games Committee</a>
+                    <a href="../work-experiences/midwest.html">Malaysia Midwest Games Committee</a>
                   </li>
                   <li>
-                    <a href="sct.html">Solar Car Team</a>
+                    <a href="../work-experiences/sct.html">Solar Car Team</a>
                   </li>
                 </ul>
               </li>
@@ -84,20 +84,20 @@
                 <a>Sunway University, Selangor, Malaysia</a>
                 <ul>
                   <li>
-                    <a href="adtp.html">American Degree Transfer Program Student Committee</a>
+                    <a href="../work-experiences/adtp.html">American Degree Transfer Program Student Committee</a>
                   </li>
                 </ul>
               </li>
               <li>
-                <a href="projects-resume.html">Projects &amp; Résumé</a>
+                <a href="../work-experiences/projects-resume.html">Projects &amp; Résumé</a>
               </li>
             </ul>
           </li>
           <li class="current"><!-- Interests Tab -->
-            <a href="../interests/interests.html">Interests</a>
+            <a href="/interests.html">Interests</a>
             <ul>
               <li>
-                <a href="../interests/interests.html">Hobbies &amp; Projects</a>
+                <a href="interests.html">Hobbies &amp; Projects</a>
               </li>
             </ul>
           </li>
@@ -213,12 +213,12 @@
       if (d < 10){d = "0" + d;}
       document.getElementById("date").innerHTML = m + "/" + d + "/" + y;
     </script>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/skel-viewport.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/jquery.dropotron.min.js"></script>
+    <script src="../assets/js/skel.min.js"></script>
+    <script src="../assets/js/skel-viewport.min.js"></script>
+    <script src="../assets/js/util.js"></script>
+    <!--[if lte IE 8]><script src="../assets/js/ie/respond.min.js"></script><![endif]-->
+    <script src="../assets/js/main.js"></script>
   </body>
 </html>
