--- a/work-experiences/projects-resume.html
+++ b/work-experiences/projects-resume.html
@@ -126,7 +126,7 @@
 											<h1>Résumé</h1>
 										</header>
 										<section>
-											<a href="files/Chin, Khai Yi (Resume).pdf"><b>Click here to view or download (PDF) - last updated <var id="date"></var></b></a>
+											<a href="files/Chin, Khai Yi (Resume).pdf"><b>Click here to view or download (PDF) - last updated 02/21/19</b></a>
 										</section>
 								</article>
 							</div>
