--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
   <head>
     <title>Khai Yi Chin | My Portfolio</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+		<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1,">
     <link rel="shortcut icon" href="images/K%20Favicon.ico" type="image/x-icon">
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
