Add new work experience page: DunAn

--- a/work-experiences/work-experiences.html
+++ b/work-experiences/work-experiences.html
@@ -25,7 +25,7 @@
 				</div>
 			</header>
 
-      <nav id="nav"><!-- Nav -->
+		  <nav id="nav"><!-- Nav -->
         <ul>
           <li id="home"><!-- Khai Yi Chin Tab -->
             <a href="../index.html">Khai Yi Chin</a>
@@ -55,6 +55,9 @@
           <li class="current"><!-- Work Experiences Tab -->
             <a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
             <ul>
+							<li>
+								<a href="dunan.html">DunAn Precision, Inc. - R&D Division</a>
+							</li>
               <li>
                 <a>University of Texas at Austin, TX, USA</a>
                 <ul>
@@ -106,7 +109,7 @@
           </li>
         </ul>
       </nav>
-      
+
 			<div id="main-wrapper"><!-- Main -->
 				<div id="main" class="container">
 					<div class="row">
@@ -115,6 +118,12 @@
 								<section><!-- Sidebar -->
 									<h2 class="major"><span>Content</span></h2>
 									<ul class="divided">
+										<li>
+											<article class="box post-summary">
+												<h3><a href="dunan.html">DunAn Precision, Inc. - R&D Division</a></h3>
+												<h5><a>Mechanical Engineer</a></h5>
+											</article>
+										</li>
 										<li>
 											<article class="box post-summary">
 												<h3><a>UT Austin</a></h3>
@@ -164,6 +173,17 @@
 						
 						<div class="9u 12u(mobile) important(mobile)"><!-- Main Content -->
 							<div class="content content-right">
+								<article class="box page-content">
+									<header>
+										<h2>DunAn Precision, Inc. - R&D Division</h2>
+										<h4>Austin, TX, USA</h4>
+										<p>Mechanical Engineer</p>
+									</header>
+									<section class="work-experience section">
+										<span class="image featured" title="DunAn logo"><img src="images/test.png" alt="DunAn logo"/></span>
+										<p>I started my position as the principal mechanical engineer at the R&D Division of DunAn Precision, Inc. in April 2018. Even though DunAn Precision, Inc. focuses primarily on the HVAC industry, the R&D Division in Austin, TX developed smart cameras called the Visual Inertial Measurement Unit (VIMU) for industrial robotics and autonomous vehicle applications. In February 2019, the division was dissolved due to funding issues, which also affected many of DunAn's other operations in North America. <a href="dunan.html">Read more</a></p>
+									</section>
+								</article>
 								<article class="box page-content" id="uofm"><!-- RAMlab -->
 									<header>
 										<h2>Robotics and Motion Laboratory</h2>
