Update nav bar to show DunAn link

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <li><!-- Work Experiences Tab -->
             <a id="work-experiences" href="work-experiences/work-experiences.html"> Work &amp; Leadership Experiences</a>
             <ul>
+							<li>
+								<a href="work-experiences/dunan.html">DunAn Precision, Inc. - R&D Division</a>
+							</li>
               <li>
                 <a>University of Texas at Austin, TX, USA</a>
                 <ul>
