--- a/work-experiences/midwest.html
+++ b/work-experiences/midwest.html
@@ -55,6 +55,9 @@
           <li class="current"><!-- Work Experiences Tab -->
             <a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
             <ul>
+							<li>
+								<a href="dunan.html">DunAn Precision, Inc. - R&D Division</a>
+							</li>
               <li>
                 <a>University of Texas at Austin, TX, USA</a>
                 <ul>
@@ -93,7 +96,7 @@
               </li>
             </ul>
           </li>
-          <li><!-- Non-Academic Tab -->
+          <li><!-- Interests Tab -->
             <a href="../interests/interests.html">Interests</a>
             <ul>
               <li>
@@ -106,6 +109,7 @@
           </li>
         </ul>
       </nav>
+
 			<div id="main-wrapper"><!-- Main -->
 				<div id="main" class="container">
 					<div class="row">
