--- a/interests/interests.html
+++ b/interests/interests.html
@@ -25,7 +25,7 @@
 				</div>
 			</header>
 
-			<nav id="nav"><!-- Nav -->
+		  <nav id="nav"><!-- Nav -->
         <ul>
           <li id="home"><!-- Khai Yi Chin Tab -->
             <a href="../index.html">Khai Yi Chin</a>
@@ -55,6 +55,9 @@
           <li><!-- Work Experiences Tab -->
             <a id="work-experiences" href="../work-experiences/work-experiences.html"> Work &amp; Leadership Experiences</a>
             <ul>
+							<li>
+								<a href="../work-experiences/dunan.html">DunAn Precision, Inc. - R&D Division</a>
+							</li>
               <li>
                 <a>University of Texas at Austin, TX, USA</a>
                 <ul>
@@ -94,7 +97,7 @@
             </ul>
           </li>
           <li class="current"><!-- Interests Tab -->
-            <a href="/interests.html">Interests</a>
+            <a href="interests.html">Interests</a>
             <ul>
               <li>
                 <a href="interests.html">Hobbies &amp; Projects</a>
@@ -105,7 +108,8 @@
             <a href="https://khaiyichin.blogspot.com">Blog</a>
           </li>
         </ul>
-      </nav><!-- Main -->
+      </nav>
+
 				<div id="main-wrapper"><!-- Main -->
 					<div id="main" class="container">
 						<div class="row">
