--- a/work-experiences/pierpont.html
+++ b/work-experiences/pierpont.html
@@ -25,7 +25,7 @@
 				</div>
 			</header>
 
-			<nav id="nav"><!-- Nav -->
+		  <nav id="nav"><!-- Nav -->
         <ul>
           <li id="home"><!-- Khai Yi Chin Tab -->
             <a href="../index.html">Khai Yi Chin</a>
@@ -55,6 +55,9 @@
           <li class="current"><!-- Work Experiences Tab -->
             <a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
             <ul>
+							<li>
+								<a href="dunan.html">DunAn Precision, Inc. - R&D Division</a>
+							</li>
               <li>
                 <a>University of Texas at Austin, TX, USA</a>
                 <ul>
@@ -106,6 +109,7 @@
           </li>
         </ul>
       </nav>
+
 			<div id="main-wrapper"><!-- Main -->
 				<div id="main" class="container">
 					<div class="row">
