Correct DunAn logo reference

--- a/work-experiences/work-experiences.html
+++ b/work-experiences/work-experiences.html
@@ -180,7 +180,7 @@
 										<p>Mechanical Engineer</p>
 									</header>
 									<section class="work-experience section">
-										<span class="image featured" title="DunAn logo"><img src="images/test.png" alt="DunAn logo"/></span>
+										<span class="image featured" title="DunAn logo"><img src="images/dunan.png" alt="DunAn logo"/></span>
 										<p>I started my position as the principal mechanical engineer at the R&D Division of DunAn Precision, Inc. in April 2018. Even though DunAn Precision, Inc. focuses primarily on the HVAC industry, the R&D Division in Austin, TX developed smart cameras called the Visual Inertial Measurement Unit (VIMU) for industrial robotics and autonomous vehicle applications. In February 2019, the division was dissolved due to funding issues, which also affected many of DunAn's other operations in North America. <a href="dunan.html">Read more</a></p>
 									</section>
 								</article>
