1. Completed the ut-gra.html page 2. Added all the ut-gra images 3. Updated the "Last Updated" date 4. Updated the entry for ut-gra in work-experiences.html

--- a/work-experiences/ut-gra.html
+++ b/work-experiences/ut-gra.html
@@ -121,63 +121,29 @@
 										<p>Graduate Research Assistant</p>
 									</header>
 									<section class="introduction"><!-- Intro -->
-										<span class="image left square" title="McKibben artificial muscles wrapped by Smart Braid on the test fixture"><img src="images/ramlab1.jpg" alt="McKibben artificial muscles wrapped by Smart Braid on the test fixture" /></span>
-										<p>INTRO</p>
+										<span class="image left square" title="A junction comprising two (5,5) metallic single-walled carbon nanotubes"><img src="images/ut-gra1.png" alt="A junction comprising two (5,5) metallic single-walled carbon nanotubes" /></span>
+										<p>During my master's degree, I worked with Dr. Eric Fahrenthold from the Mechnical Engineering Department on the investigation of doped carbon nanotube models as part of a basic research project funded by the Office of Naval Research (ONR). Currently, the research has been completed and results are being compiled for submission to journals while my master's thesis is available publicly on the <a href="https://repositories.lib.utexas.edu/handle/2152/72446"> UT Electronic Theses and Dissertations website </a>.</p>
 									</section>
 									<section class="work-experience section"><!-- Background -->
 										<h3 class="individual">Background</h3>
-										<p>BACKGROUND OF WHAT I DO</p>
+										<p>Carbon nanotubes are tube-like structures formed by carbon atoms. Like diamond and graphite, carbon nanotubes are allotropes of carbon. In my research, I focused on single-walled carbon nanotubes, which can be visualized as having a sheet of carbon atoms (also called graphene &mdash; a single layer of graphite) rolled up into a tube. Carbon possesses great potential in the development of electronic devices, due to its unique electronic properties (which can be observed when organized into a specific configuration like carbon nanotubes and graphene), much like its fellow group 14 member element: silicon.</p>
 									</section>
 									<section class="work-experience section"><!-- My Work and Experience -->
 										<h3 class="individual">My Work and Experience</h3>
-										<span class="image left square" title="Test fixture designed for antagonized testing"><img src = "images/ramlab2.jpg" alt="Test fixture designed for antagonized testing"/></span>
-										<span class="image left square" title="Frontal view of test fixture: potentiometer-shaft coupling-rod-pulley"><img src = "images/ramlab3.jpg" alt="Frontal view of test fixture: potentiometer-shaft coupling-rod-pulley"/></span>
-										<span class="image left square" title="Side view of the test fixture: filters-valves"><img src = "images/ramlab4.jpg" alt="Side view of the test fixture: filters-valves"/></span>
-										<span class="image left square" title="Test fixture set up for testing"><img src = "images/ramlab5.jpg" alt="Test fixture set up for testing"/></span>
-										<p>I started on the project with Wyatt to learn about the McKibben artificial muscles and the novel sensor. I was involved heavily with the implementation of the project, from building test benches and sensors to code writing for data analyses. In the early stages, I braided some Smart Braid sensors, which were then used to characterize their inductance based on contraction length. I also designed and built a test fixture to allow antagonized testing of the Smart Braid on the muscles (first picture from left), which were made with blocks of wood, 1/4" PVC hoses and 80-20 aluminum brackets from McMaster-Carr. </p>
-										<p> During Summer 2015, I worked mostly on achieving feedback control with the Smart Braid, and from then onwards we moved to improving sensor design processes as well as trying a different actuator configuration. We used the data obtained from the test fixture to calibrate and predict the inductance-contraction and force-pressure relationship with Matlab. Using LabVIEW, I designed and modified the Virtual Instruments (VI) with Wyatt's guidance to allow feedback control as well as to improve functionality of the LabVIEW controller.</p>
-										<p>The novel sensor won first place in the <a href= "http://softroboticstoolkit.com/announcing-winners-2015-design-competition">Soft Robotics Toolkit 2015 Prize for Contributions in Soft Robotics Research</a>. Our work was presented at the Fluid Power Innovation & Research Conference (FPIRC) 2015, while our  article 'Contraction Sensing with Smart Braid McKibben Muscles'was published in the IEEE Transactions on Mechatronics journal, vol. 21 issue 3. Our poster on the Smart Braids was also displayed during the Dynamic Walking 2016 conference.</p>
-										<p>I've gained a lot of experiences from the lab working with softwares like MATLAB and LABview, as well as hardware knowledge. During the summer, we encountered noisy signals frequently from our potentiometer, which gave me the chance to learn how to solve it. One of the effective ways of analyze noisy data that I learnt and used, was the moving average filter, which allowed us to characterize cleaner data. Afterwards, we shifted to an incremental encoder to solve the problem of noise, which was especially problematic to use in PID control. Besides, I also familiarized myself in utilizing digital hardware, when I learnt to communicate with the Texas Instrument LDC1614 Inductance to Digital Converter using LabVIEW.</p>
+										<span class="image left square" title="Top projection image of rotationally misaligned carbon nanotube junctions, unrolled"><img src = "images/ut-gra2.jpg" alt="Top projection image of rotationally misaligned carbon nanotube junctions, unrolled"/></span>
+										<span class="image left square" title="Front projection image of rotationally misaligned carbon nanotube junctions"><img src = "images/ut-gra3.png" alt="Front projection image of rotationally misaligned carbon nanotube junctions"/></span>
+										<span class="image left square" title="Electronic band structure of a (5,5) metallic single-walled carbon nanotube"><img src = "images/ut-gra4.png" alt="Electronic band structure of a (5,5) metallic single-walled carbon nanotube"/></span>
+										<span class="image left square" title="A (5,5) metallic single-walled carbon nanotube doped with potassium tetrabromoaurate (KAuBr4) molecule"><img src = "images/ut-gra5.png" alt="A (5,5) metallic single-walled carbon nanotube doped with potassium tetrabromoaurate (KAuBr4) molecule"/></span>
+										<p>The objective of my research was to investigate the electronic characteristics of doped carbon nanotubes. In particular, we were interested in observing improvements in conductance of the carbon nanotubes (on both the micro and macro level) when different dopants at different configurations are <a href="https://en.wikipedia.org/wiki/Physisorption">physisorped</a> to the nanotubes. Due to its unique mechanical and electronic properties, studies have shown that carbon nanotubes display great potential as replacement for materials in the electronic devices industry, from flexible electronics to display technologies.</p>
+										<p>For my research, I generate computational models of carbon nanotubes for simulation using the SIESTA 4.0 package: SIESTA (Spanish Initiative for Electronic Simulations with Thousands of Atoms) is a self-consistent density functional theory (DFT) open source software that uses a basis set based on the linear combinations of atomic orbitals (LCAO). I created the desired geometry of the atoms to generate carbon nanotube models &mdash; usually with dopants &mdash; and perform structural relaxation of the models using the supercomputer resources provided by the <a href="https://www.tacc.utexas.edu/">Texas Advanced Computing Center (TACC)</a>.</p>
+										<p>Next, electronic transport calculations were performed for the relaxed models (once they passsed a structural feasibility check) using a module within the SIESTA package. Through evaluation of the calculation results the potential of the doped nanotube in fabricating conductive material can be determined. This information provides some evidence and intuition for experimental researchers when deciding to experiment with fabricating nanowires using doped carbon nanotubes.</p>
+										<p>Prior to working as a graduate research assistant, I had little to no experience in quantum mechanics. My graduate school education in quantum mechanical modeling was thus very exciting, as I discovered the peculiar (and oftentimes unintuitive) behavior of subatomic particles. Throughout my research of doped carbon nanotubes, my knowledge on carbon nanoscale devices has improved, and my knowledge of solid-state physics has improved as well. I also enhanced my ability in writing technical documentation as well as interpreting scientific literature.</p>
 									</section>
 									<section><!-- External Links and Materials -->
 										<h3 class="individual">External Links and Materials</h3>
-										<h4 class="initial h4">Video Clips</h4>
-										<li>
-											Summer Undergraduate Research in Engineering (SURE) 2015 project video
-										</li>
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/V3Utn0IMaiY" frameborder="0" allowfullscreen></iframe>
-										<li>
-											McKibben Artificial Muscles Up Close
-										</li>
-										<video class="videos" width="400" height="300" controls title="McKibben Artificial Muscles Up Close">
-											<source src="videos/ramlabB.mp4" type="video/mp4">
-											<source src="videos/ramlabB.ogv" type="video/ogv">
-											Your browser does not support this video format. Please use Google Chrome, Safari, Mozilla Firefox, or IE9 to view.
-											</source>
-											</source>
-										</video>
-										<li>
-											McKibben Artificial Muscles Angle Tracking with Sinusoidal Input on LabVIEW
-										</li>
-										<video class="videos" width="400" height="300" controls title="McKibben Artificial Muscles Angle Tracking with Sinusoidal Input">
-											<source src="videos/ramlabA.mp4" type="video/mp4">
-											<source src="videos/ramlabA.ogv" type="video/ogv">
-											 Your browser does not support this video format. Please use Google Chrome, Safari, Mozilla Firefox, or IE9 to view.
-											</source>
-											</source>
-										</video>
 										<h4 class="initial h4">Links</h4>
 										<li>
-											<a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7302589">'Contraction Sensing with Smart Braid McKibben Muscles' - IEEE Transactions on Mechatronics</a>
-										</li>
-										<li>
-											<a href="http://ram-lab.engin.umich.edu/">Robotics and Motion Laboratory (RAMlab), University of Michigan, Ann Arbor, MI, USA</a>
-										</li>
-										<li>
-											<a href="http://softroboticstoolkit.com/smart-braids">Soft Robotics Toolkit Smart Braids Page</a>
-										</li>
-										<li>
-											<a href="http://www.wyattfelt.com/">PhD student, Wyatt Felt</a>
+											<a href="https://repositories.lib.utexas.edu/handle/2152/72446">Master's thesis: "Molecular doping of carbon nanotube conductors"</a>
 										</li>
 									</section>
 								</article>
