--- a/work-experiences/work-experiences.html
+++ b/work-experiences/work-experiences.html
@@ -121,13 +121,13 @@
 										<li>
 											<article class="box post-summary">
 												<h3><a href="dunan.html">DunAn Precision, Inc. - R&D Division</a></h3>
-												<h5><a>Mechanical Engineer</a></h5>
+												<h5><a href="dunan.html">Mechanical Engineer</a></h5>
 											</article>
 										</li>
 										<li>
 											<article class="box post-summary">
-												<h3><a>UT Austin</a></h3>
-												<h5><a>Graduate Research Assistant</a></h5>
+												<h3><a href="ut-gra.html">UT Austin Department of Mechanical Engineering</a></h3>
+												<h5><a href="ut-gra.html">Graduate Research Assistant</a></h5>
 											</article>
 										</li>
 										<li>
@@ -173,7 +173,7 @@
 						
 						<div class="9u 12u(mobile) important(mobile)"><!-- Main Content -->
 							<div class="content content-right">
-								<article class="box page-content">
+								<article class="box page-content"><!-- DunAn Precision, Inc. -->
 									<header>
 										<h2>DunAn Precision, Inc. - R&D Division</h2>
 										<h4>Austin, TX, USA</h4>
@@ -184,7 +184,18 @@
 										<p>I started my position as the principal mechanical engineer at the R&D Division of DunAn Precision, Inc. in April 2018. Even though DunAn Precision, Inc. focuses primarily on the HVAC industry, the R&D Division in Austin, TX developed smart cameras called the Visual Inertial Measurement Unit (VIMU) for industrial robotics and autonomous vehicle applications. In February 2019, the division was dissolved due to funding issues, which also affected many of DunAn's other operations in North America. <a href="dunan.html">Read more</a></p>
 									</section>
 								</article>
-								<article class="box page-content" id="uofm"><!-- RAMlab -->
+								<article class="box page-content"><!-- UT Austin -->
+									<header>
+										<h2>The University of Texas at Austin Dept. of Mechanical Engineering</h2>
+										<h4>Austin, TX, USA</h4>
+										<p>Graduate Research Assistant</p>
+									</header>
+									<section class="work-experience section">
+										<span class="image featured" title="UT Austin ME Dept logo"><img src="images/ut-gra.png" alt="UT Austin ME Dept logo"/></span>
+										<p>During my master's degree, I worked with Dr. Eric Fahrenthold from the Mechnical Engineering Department on the investigation of doped carbon nanotube models as part of a basic research project funded by the Office of Naval Research (ONR). Currently, the research has been completed and results are being compiled for submission to journals while my master's thesis is available publicly on the <a href="https://repositories.lib.utexas.edu/handle/2152/72446"> UT Electronic Theses and Dissertations website </a>. <a href="ut-gra.html">Read more</a></p>
+									</section>
+								</article>
+								<article class="box page-content"><!-- RAMlab -->
 									<header>
 										<h2>Robotics and Motion Laboratory</h2>
 										<h4>University of Michigan, USA</h4>
