Updated links and description on navigation bar to ut-gra.html

--- a/interests/interests.html
+++ b/interests/interests.html
@@ -62,7 +62,7 @@
                 <a>University of Texas at Austin, TX, USA</a>
                 <ul>
                   <li>
-                    <a>**WORK IN PROGRESS**</a>
+                    <a href="../work-experiences/ut-gra.html">Dept. of Mechanical Engineering</a>
                   </li>
                 </ul>
               </li>
