--- a/work-experiences/ut-gra.html
+++ b/work-experiences/ut-gra.html
@@ -62,7 +62,7 @@
                 <a>University of Texas at Austin, TX, USA</a>
                 <ul>
                   <li>
-                    <a href="ut-gra.html">Graduate Research Assistant</a>
+                    <a href="ut-gra.html">Dept. of Mechanical Engineering</a>
                   </li>
                 </ul>
               </li>
